--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,23 +16,24 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.0",
     "@types/joi": "^17.2.3",
-    "@types/node": "^16.3.3",
+    "@types/node": "^16.11.45",
     "@types/supertest": "^2.0.11",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.32.0",
     "jest": "^28.0.3",
-    "nodemon": "^2.0.12",
-    "prisma": "^3.13.0",
+    "nodemon": "^2.0.19",
+    "prisma": "^3.15.2",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@prisma/client": "^3.13.0",
+    "@faker-js/faker": "^7.3.0",
+    "@prisma/client": "^3.15.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.4.1",
     "react-player": "^2.10.0"
