--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "dev": "nodemon src/server.ts"
   },
   "keywords": [],
@@ -14,17 +15,17 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^27.5.2",
     "@types/joi": "^17.2.3",
     "@types/node": "^16.11.45",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "^2.0.12",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.32.0",
-    "jest": "^28.0.3",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prisma": "^3.15.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^28.0.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
@@ -32,6 +33,7 @@
     "@faker-js/faker": "^7.3.0",
     "@prisma/client": "^3.15.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
